@@ -1,5 +1,8 @@
  (Format: Year/Month/Day)
 Changes for 1.0.0:
+*07/06/30:
+   * Fix _NET_WM_STATE_DEMANDS_ATTENTION with tabbed windows, #1732392 (Mark)
+     Ewmh.cc/hh
 *07/06/29:
    * Updates for compiling with gcc 4.3 (thanks Dmitry E. Oboukhov)
 *07/06/28:
